gen/mirror/v1/cargo-errors.log
    Checking google-mirror1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/mirror/v1/lib)
error[E0609]: no field `request` on type `resources::timeline::attachments::InsertRequestBuilder<'a, A>`
    --> mirror/v1/lib/src/lib.rs:4580:67
     |
4580 |                     let request_json = ::serde_json::to_vec(&self.request)?;
     |                                                                   ^^^^^^^ help: a field with a similar name exists: `reqwest`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
error: Could not compile `google-mirror1`.

To learn more, run the command again with --verbose.
